--- a/about.html
+++ b/about.html
@@ -1,38 +1,44 @@
 <!DOCTYPE html>
-<html lang="pt-bt">
+<html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <title>Sobre Mim</title>
-
-    <link rel="stylesheet" href="./style/Style.css">
-
+    <title>Sobre mim</title>
+    <link rel="stylesheet" href="./styles/style.css">
 </head>
-<body>
 
-    <header class="proa">
-        <nav class="proaguia">
-            <a class="proaguia__link" href="Index.html">Home</a>
-            <a class="proaguia__link" href="about.html">Sobre Mim</a>
+<body>
+    <header class="cabecalho">
+        <nav class="cabecalho__menu">
+            <a class="cabecalho__menu__link" href="index.html">Home</a>
+            <a class="cabecalho__menu__link" href="about.html">Sobre mim</a>
         </nav>
     </header>
 
-    <main class="todo">
-        <section class="todo__txt">
-            <h1 class="todo__txt__titulo"> <strong>About-Me</strong></h1>
-            <p class="todo__txt__paragrafo">
-                "Uma chuva se retrai e umidese o quadro de Wiliam Blaick , o mar seca a quatro jardas , caminho ao lado de pequenas estrelas marinhas com cinco pontas elas são vivas no chão e no quadro, sobre mar  caí a deriva um paraquedista que pensa no suicídio De Santos Dumont."
+    <main class="apresentacao">
+        <section class="apresentacao__conteudo">
+            <h1 class="apresentacao__conteudo__titulo">Sobre mim</h1>
+            <p class="apresentacao__conteudo__texto">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti
+                atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident,
+                similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga.
             </p>
-            <p class="todo__txt__paragrafo">
-                "De tudo ao meu amor serei atento antes, e com tal zelo, e sempre, e tanto que mesmo em face do maior encanto dele se encante mais meu pensamento. Quero vivê-lo em cada vão momento e em seu louvor hei de espalhar meu canto e rir meu riso e derramar meu pranto ao seu pesar ou seu contentamento e assim, quando mais tarde me procure quem sabe a morte, angústia de quem vive quem sabe a solidão, fim de quem ama eu possa me dizer do amor: Que não seja imortal, posto que é chama, mas que seja infinito enquanto dure."
-            </p>
+            <p class="apresentacao__conteudo__texto">
+                Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est
+                eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas
+                assumenda est, omnis dolor repellendus. Temporibus autem quibusdam et aut officiis debitis aut rerum
+                necessitatibus saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae. Itaque earum
+                rerum hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut
+                perferendis doloribus asperiores ipsum delis forum birol parela maxime infena. Excepteur sint occaecat
+                cupidatat non.</p>
         </section>
-        <img class="todo__image" src="./assets/scarlatcore.jpg" alt="Telaescarlate">
-
+        <img class="apresentacao__imagem" src="./assets/imagem.png" alt="Foto da Joana Santos programando">
     </main>
-    
-    <footer class="rodape"><strong>Desenvolvido Por Saas's love</strong></footer>
 
+    <footer class="rodape">
+        <p>Desenvolvido por JCTG Software.</p>
+    </footer>
 </body>
+
 </html>
