--- a/about.html
+++ b/about.html
@@ -6,14 +6,14 @@
 
     <title>Sobre Mim</title>
 
-    <link rel="stylesheet" href="./style/Style.css">
+    <link rel="stylesheet" href="./style/style.css">
 
 </head>
 <body>
 
     <header class="proa">
         <nav class="proaguia">
-            <a class="proaguia__link" href="Index.html">Home</a>
+            <a class="proaguia__link" href="index.html">Home</a>
             <a class="proaguia__link" href="about.html">Sobre Mim</a>
         </nav>
     </header>
