--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <header class="proa">
         <nav class="proaguia">
-            <a class="proaguia__link" href="Index.html">Home</a>
+            <a class="proaguia__link" href="index.html">Home</a>
             <a class="proaguia__link" href="about.html">Sobre Mim</a>
         </nav>
     </header>
